Fix dark mode for color picker swatch overlay
On hover and mouse down, the color overlay is fixed, suitable for
light theme. This change also provides the suitable overlay for
dark theme.

R=jacktfranklin@chromium.org

Bug: 1152736, 1209776
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3220731
Auto-Submit: Yang Guo <yangguo@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/ui/legacy/components/color_picker/spectrum.css
+++ b/front_end/ui/legacy/components/color_picker/spectrum.css
@@ -320,14 +320,12 @@
 
 .swatch-overlay:hover,
 .swatch-overlay:focus-visible {
-  background-color: rgb(0 0 0 / 30%); /* stylelint-disable-line plugin/use_theme_colors */
-  /* See: crbug.com/1152736 for color variable migration. */
+  background-color: var(--color-background-inverted-opacity-30);
   opacity: 100%;
 }
 
 .swatch-overlay:active {
-  background-color: rgb(0 0 0 / 50%); /* stylelint-disable-line plugin/use_theme_colors */
-  /* See: crbug.com/1152736 for color variable migration. */
+  background-color: var(--color-background-inverted-opacity-50);
 }
 
 [is=ui-icon].icon-mask.copy-color-icon {
